--- a/index.html
+++ b/index.html
@@ -12,8 +12,17 @@
 <a href="contact.html">Contact</a>
 
 <h3>Greetings I welcome you to the future by Tasmadian tech industry</h3>
+<p>In this portfolio you will be able to learn many things this include the things which you take to be a mystery to you</p>
+<br>
+<p>For starters before you continue you will be required to fill a form so as to show what are your interest aand how you think of the Tasmadian tech industry </p>
+<forms>
 
 
+
+
+
+    
+</forms>
 
 
 
