--- a/services.html
+++ b/services.html
@@ -18,9 +18,9 @@
 <p>If you require fabuzi deals then you are in the right place</p>
 <ol>
     <li>Assasination</li>
-    <li></li>
-    <li></li>
-    <li></li>
+    <li>Fabuzi</li>
+    <li>Malicious programming</li>
+    <li>Trafficking</li>
 </ol>
 
 
